[project]
name = "dv-data-retention-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.2",
    "python-dateutil>=2.9.0.post0",
    "pywin32>=311 ; sys_platform == 'win32'",
    "requests>=2.33.1",
]
