[project]
name = "dv-data-retention-reviewer"
version = "1.1-beta"
description = "This repository contains code for a scripted process that reviews published and unpublished datasets in a Dataverse instance and produces reports which identify datasets to be considered for deaccessioning."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.2",
    "python-dateutil>=2.9.0.post0",
    "pywin32>=311 ; sys_platform == 'win32'",
    "requests>=2.33.1",
]
